compiler/zrc_codegen/src/stmt/snapshots/zrc_codegen__stmt__loops__tests__for_loop_with_chained_logical_and_generates_valid_phi_nodes.snap
---
source: compiler/zrc_codegen/src/stmt/loops.rs
description: "fn test_for(buffer: *u8, len: usize) -> usize {\n    let count: usize = 0;\n    // TEST: chained AND in for condition should generate valid PHI\n    // nodes where the loop body and latch branch back to the\n    // correct header\n    for (let i: usize = 0; i < len && buffer[i] != 0; i += 1) {\n        count += 1;\n    }\n    return count;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i64 @test_for(ptr %0, i64 %1) !dbg !3 {
entry:
  %let_i = alloca i64, align 8, !dbg !11
  %let_count = alloca i64, align 8, !dbg !11
  %arg_len = alloca i64, align 8, !dbg !11
  %arg_buffer = alloca ptr, align 8, !dbg !11
  store ptr %0, ptr %arg_buffer, align 8, !dbg !11
    #dbg_declare(ptr %arg_buffer, !9, !DIExpression(), !13)
  store i64 %1, ptr %arg_len, align 4, !dbg !11
    #dbg_declare(ptr %arg_len, !10, !DIExpression(), !14)
  store i64 0, ptr %let_count, align 4, !dbg !15
  store i64 0, ptr %let_i, align 4, !dbg !17
  br label %header, !dbg !17

header:                                           ; preds = %latch, %entry
  %load = load i64, ptr %let_i, align 4, !dbg !18
  %load1 = load i64, ptr %arg_len, align 4, !dbg !19
  %cmp = icmp ult i64 %load, %load1, !dbg !19
  br i1 %cmp, label %land_rhs, label %land_end, !dbg !19

body:                                             ; preds = %land_end
  %load6 = load i64, ptr %let_count, align 4, !dbg !20
  %add = add i64 %load6, 1, !dbg !22
  store i64 %add, ptr %let_count, align 4, !dbg !20
  br label %latch, !dbg !20

latch:                                            ; preds = %body
  %load7 = load i64, ptr %let_i, align 4, !dbg !23
  %add8 = add i64 %load7, 1, !dbg !24
  store i64 %add8, ptr %let_i, align 4, !dbg !23
  br label %header, !dbg !23

exit:                                             ; preds = %land_end
  %load9 = load i64, ptr %let_count, align 4, !dbg !25
  ret i64 %load9, !dbg !25

land_rhs:                                         ; preds = %header
  %load2 = load ptr, ptr %arg_buffer, align 8, !dbg !26
  %load3 = load i64, ptr %let_i, align 4, !dbg !27
  %gep = getelementptr i8, ptr %load2, i64 %load3, !dbg !27
  %load4 = load i8, ptr %gep, align 1, !dbg !27
  %cmp5 = icmp ne i8 %load4, 0, !dbg !28
  br label %land_end, !dbg !28

land_end:                                         ; preds = %land_rhs, %header
  %land_result = phi i1 [ false, %header ], [ %cmp5, %land_rhs ], !dbg !28
  br i1 %land_result, label %body, label %exit, !dbg !28
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test_for", linkageName: "test_for", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6, !7, !6}
!6 = !DIBasicType(name: "usize")
!7 = !DIBasicType(name: "u8")
!8 = !{!9, !10}
!9 = !DILocalVariable(name: "buffer", scope: !3, file: !2, line: 1, type: !7)
!10 = !DILocalVariable(name: "len", arg: 1, scope: !3, file: !2, line: 1, type: !6)
!11 = !DILocation(line: 1, column: 47, scope: !12)
!12 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 47)
!13 = !DILocation(line: 1, column: 13, scope: !12)
!14 = !DILocation(line: 1, column: 26, scope: !12)
!15 = !DILocation(line: 2, column: 9, scope: !16)
!16 = distinct !DILexicalBlock(scope: !12, file: !2, line: 1, column: 47)
!17 = !DILocation(line: 6, column: 14, scope: !16)
!18 = !DILocation(line: 6, column: 28, scope: !16)
!19 = !DILocation(line: 6, column: 32, scope: !16)
!20 = !DILocation(line: 7, column: 9, scope: !21)
!21 = distinct !DILexicalBlock(scope: !16, file: !2, line: 6, column: 63)
!22 = !DILocation(line: 7, column: 18, scope: !21)
!23 = !DILocation(line: 6, column: 55, scope: !16)
!24 = !DILocation(line: 6, column: 60, scope: !16)
!25 = !DILocation(line: 9, column: 12, scope: !16)
!26 = !DILocation(line: 6, column: 39, scope: !16)
!27 = !DILocation(line: 6, column: 46, scope: !16)
!28 = !DILocation(line: 6, column: 52, scope: !16)
