compiler/zrc_codegen/src/stmt/snapshots/zrc_codegen__stmt__loops__tests__four_loop_generates_properly.snap
---
source: compiler/zrc_codegen/src/stmt/loops.rs
description: "fn f();\nfn test() {\n    four f();\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

declare {} @f()

define {} @test() !dbg !3 {
entry:
  %let___four_i = alloca i8, align 1
  store i8 0, ptr %let___four_i, align 1, !dbg !8
  br label %header, !dbg !8

header:                                           ; preds = %latch, %entry
  %load = load i8, ptr %let___four_i, align 1, !dbg !8
  %cmp = icmp ult i8 %load, 4, !dbg !8
  br i1 %cmp, label %body, label %exit, !dbg !8

body:                                             ; preds = %header
  %call = call {} @f(), !dbg !11
  br label %latch, !dbg !11

latch:                                            ; preds = %body
  %load1 = load i8, ptr %let___four_i, align 1, !dbg !8
  %inc = add i8 %load1, 1, !dbg !8
  store i8 %inc, ptr %let___four_i, align 1, !dbg !8
  br label %header, !dbg !8

exit:                                             ; preds = %header
  ret {} zeroinitializer, !dbg !13
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 2, type: !4, scopeLine: 2, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 3, column: 5, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 2, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 2, column: 11)
!11 = !DILocation(line: 3, column: 10, scope: !12)
!12 = distinct !DILexicalBlock(scope: !9, file: !2, line: 3, column: 10)
!13 = !DILocation(line: 4, column: 1, scope: !9)
