compiler/zrc_codegen/src/stmt/snapshots/zrc_codegen__stmt__loops__tests__while_loop_with_chained_logical_or_generates_valid_phi_nodes.snap
---
source: compiler/zrc_codegen/src/stmt/loops.rs
description: "fn skip_white(buffer: *u8, start: usize) -> usize {\n    let out: usize = 0;\n    // TEST: chained OR in while condition should generate valid PHI\n    // nodes where the loop body branches back to the correct header\n    while (buffer[start + out] == 32\n        || buffer[start + out] == 9\n        || buffer[start + out] == 10\n        || buffer[start + out] == 13)\n    {\n        out += 1;\n    }\n    return out;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i64 @skip_white(ptr %0, i64 %1) !dbg !3 {
entry:
  %let_out = alloca i64, align 8, !dbg !11
  %arg_start = alloca i64, align 8, !dbg !11
  %arg_buffer = alloca ptr, align 8, !dbg !11
  store ptr %0, ptr %arg_buffer, align 8, !dbg !11
    #dbg_declare(ptr %arg_buffer, !9, !DIExpression(), !13)
  store i64 %1, ptr %arg_start, align 4, !dbg !11
    #dbg_declare(ptr %arg_start, !10, !DIExpression(), !14)
  store i64 0, ptr %let_out, align 4, !dbg !15
  br label %header, !dbg !17

header:                                           ; preds = %body, %entry
  %load = load ptr, ptr %arg_buffer, align 8, !dbg !18
  %load5 = load i64, ptr %arg_start, align 4, !dbg !19
  %load6 = load i64, ptr %let_out, align 4, !dbg !20
  %add = add i64 %load5, %load6, !dbg !20
  %gep = getelementptr i8, ptr %load, i64 %add, !dbg !20
  %load7 = load i8, ptr %gep, align 1, !dbg !20
  %cmp = icmp eq i8 %load7, 32, !dbg !21
  br i1 %cmp, label %lor_end4, label %lor_rhs3, !dbg !21

body:                                             ; preds = %lor_end
  %load31 = load i64, ptr %let_out, align 4, !dbg !22
  %add32 = add i64 %load31, 1, !dbg !24
  store i64 %add32, ptr %let_out, align 4, !dbg !22
  br label %header, !dbg !22

exit:                                             ; preds = %lor_end
  %load33 = load i64, ptr %let_out, align 4, !dbg !25
  ret i64 %load33, !dbg !25

lor_rhs:                                          ; preds = %lor_end2
  %load23 = load ptr, ptr %arg_buffer, align 8, !dbg !26
  %load24 = load i64, ptr %arg_start, align 4, !dbg !27
  %load25 = load i64, ptr %let_out, align 4, !dbg !28
  %add26 = add i64 %load24, %load25, !dbg !28
  %gep27 = getelementptr i8, ptr %load23, i64 %add26, !dbg !28
  %load28 = load i8, ptr %gep27, align 1, !dbg !28
  %cmp29 = icmp eq i8 %load28, 13, !dbg !29
  br label %lor_end, !dbg !29

lor_end:                                          ; preds = %lor_rhs, %lor_end2
  %lor_result30 = phi i1 [ true, %lor_end2 ], [ %cmp29, %lor_rhs ], !dbg !29
  br i1 %lor_result30, label %body, label %exit, !dbg !29

lor_rhs1:                                         ; preds = %lor_end4
  %load15 = load ptr, ptr %arg_buffer, align 8, !dbg !30
  %load16 = load i64, ptr %arg_start, align 4, !dbg !31
  %load17 = load i64, ptr %let_out, align 4, !dbg !32
  %add18 = add i64 %load16, %load17, !dbg !32
  %gep19 = getelementptr i8, ptr %load15, i64 %add18, !dbg !32
  %load20 = load i8, ptr %gep19, align 1, !dbg !32
  %cmp21 = icmp eq i8 %load20, 10, !dbg !33
  br label %lor_end2, !dbg !33

lor_end2:                                         ; preds = %lor_rhs1, %lor_end4
  %lor_result22 = phi i1 [ true, %lor_end4 ], [ %cmp21, %lor_rhs1 ], !dbg !33
  br i1 %lor_result22, label %lor_end, label %lor_rhs, !dbg !33

lor_rhs3:                                         ; preds = %header
  %load8 = load ptr, ptr %arg_buffer, align 8, !dbg !34
  %load9 = load i64, ptr %arg_start, align 4, !dbg !35
  %load10 = load i64, ptr %let_out, align 4, !dbg !36
  %add11 = add i64 %load9, %load10, !dbg !36
  %gep12 = getelementptr i8, ptr %load8, i64 %add11, !dbg !36
  %load13 = load i8, ptr %gep12, align 1, !dbg !36
  %cmp14 = icmp eq i8 %load13, 9, !dbg !37
  br label %lor_end4, !dbg !37

lor_end4:                                         ; preds = %lor_rhs3, %header
  %lor_result = phi i1 [ true, %header ], [ %cmp14, %lor_rhs3 ], !dbg !37
  br i1 %lor_result, label %lor_end2, label %lor_rhs1, !dbg !37
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "skip_white", linkageName: "skip_white", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6, !7, !6}
!6 = !DIBasicType(name: "usize")
!7 = !DIBasicType(name: "u8")
!8 = !{!9, !10}
!9 = !DILocalVariable(name: "buffer", scope: !3, file: !2, line: 1, type: !7)
!10 = !DILocalVariable(name: "start", arg: 1, scope: !3, file: !2, line: 1, type: !6)
!11 = !DILocation(line: 1, column: 51, scope: !12)
!12 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 51)
!13 = !DILocation(line: 1, column: 15, scope: !12)
!14 = !DILocation(line: 1, column: 28, scope: !12)
!15 = !DILocation(line: 2, column: 9, scope: !16)
!16 = distinct !DILexicalBlock(scope: !12, file: !2, line: 1, column: 51)
!17 = !DILocation(line: 5, column: 5, scope: !16)
!18 = !DILocation(line: 5, column: 12, scope: !16)
!19 = !DILocation(line: 5, column: 19, scope: !16)
!20 = !DILocation(line: 5, column: 27, scope: !16)
!21 = !DILocation(line: 5, column: 35, scope: !16)
!22 = !DILocation(line: 10, column: 9, scope: !23)
!23 = distinct !DILexicalBlock(scope: !16, file: !2, line: 9, column: 5)
!24 = !DILocation(line: 10, column: 16, scope: !23)
!25 = !DILocation(line: 12, column: 12, scope: !16)
!26 = !DILocation(line: 8, column: 12, scope: !16)
!27 = !DILocation(line: 8, column: 19, scope: !16)
!28 = !DILocation(line: 8, column: 27, scope: !16)
!29 = !DILocation(line: 8, column: 35, scope: !16)
!30 = !DILocation(line: 7, column: 12, scope: !16)
!31 = !DILocation(line: 7, column: 19, scope: !16)
!32 = !DILocation(line: 7, column: 27, scope: !16)
!33 = !DILocation(line: 7, column: 35, scope: !16)
!34 = !DILocation(line: 6, column: 12, scope: !16)
!35 = !DILocation(line: 6, column: 19, scope: !16)
!36 = !DILocation(line: 6, column: 27, scope: !16)
!37 = !DILocation(line: 6, column: 35, scope: !16)
